message Example1 {
    optional string stringVal = 1;
    optional bytes bytesVal = 2;
}
